--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
     "vue-chartjs": "^5.3.2",
-    "vue-grid-layout": "^2.4.0",
+    "vue-grid-layout-v3": "^3.1.2",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
