--- a/project.json
+++ b/project.json
@@ -1,7 +1,7 @@
 {
   "name": "carmot_front",
   "version": "1.0.0",
-  "description": "Sistema de Dashboard y KPIs para Carmot",
+  "description": "Sistema de autenticación para Carmot",
   "type": "module",
   "engines": {
     "node": "^20.19.0 || >=22.12.0"
@@ -14,11 +14,8 @@
   "dependencies": {
     "@vueuse/core": "^14.0.0",
     "axios": "^1.12.2",
-    "chart.js": "^4.5.1",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
-    "vue-chartjs": "^5.3.2",
-    "vue-grid-layout-v3": "^3.1.2",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
@@ -28,9 +25,7 @@
   },
   "keywords": [
     "vue",
-    "dashboard",
-    "kpis",
-    "charts",
+    "auth",
     "responsive",
     "carmot"
   ],
